[gd_scene load_steps=2 format=3 uid="uid://dmpm3u8hck0hn"]

[ext_resource type="Script" path="res://Ini_check/Control.gd" id="1_ghlek"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -556.0
offset_top = -525.5
offset_right = 556.0
offset_bottom = 525.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ghlek")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -22.0
offset_right = 20.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="Button5" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="Button6" type="Button" parent="VBoxContainer"]
layout_mode = 2
